<resources>
    <string name="app_name">Supu</string>
    <string name="app_idea">Idea. concept, design: Georg Toth</string>
    <string name="app_idea_url">https://www.georg-toth.com</string>
    <string name="app_code">Code by Heinrich Elsigan (root@darkstar.work)</string>
    <string name="app_code_url">https://darkstar.work</string>
    <string name="app_bottom">v1.3 (all rights reserved)</string>
    <string name="version_name">v1.3.987</string>
    <string name="action_settings">Settings</string>
    <string name="action_start">Start</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_options">Options</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="action_layout">Layout</string>
    <string name="action_visualhelp">Visual Help</string>
    <string name="action_direction">Direction</string>
    <string name="action_gameautomation">Game Automation</string>
    <string name="action_stop">Stop</string>
    <string name="help_text">Help</string>
    <string name="help_help">QUICK START GUIDE:\nLay stones without color repeating in column and row!\n\nVH: Visual Help\nSM: Size Small\nGA: Game Automation\nS: Sound\nAS: Autosave\nQS: Quicksave</string>
    <string name="build_with">Build with Android Studio 2021.3.1</string>
    <string name="learn_more">Learn more</string>
    <string name="back_button">Back</string>
    <string name="help_uri">https://www.georg-toth.com/supu</string>
	<string name="action_level">Level</string>
    <string name="next_level">Next level</string>
    <string name="replay_level">Replay level</string>
    <string name="replay_current_level">Replay current level</string>
    <string name="string_started">Game started.</string>
    <string name="string_stopped">Game stopped.</string>
    <string name="action_five">5x5</string>
	<string name="action_six">6x6</string>
	<string name="action_seven">7x7</string>
    <string name="action_eight">8x8</string>
	<string name="action_nine">9x9</string>
    <string name="action_ten">10x10</string>
	<string name="action_twelfe">12x12</string>
    <string name="load_slot0">slot0</string>
    <string name="load_slot1">slot1</string>
    <string name="load_slot2">slot2</string>
    <string name="load_slot3">slot3</string>
    <string name="load_slot4">slot4</string>
    <string name="load_slot5">slot5</string>
    <string name="load_slot6">slot6</string>
    <string name="action_screenshot">Screenshot</string>
    <string name="string_notstarted">Game isn\'t started, click start in main menu.</string>
    <string name="level_current">LevelCurrent</string>
    <string name="msg_perfect">Perfect</string>
    <string name="msg_gameOver">Game Over</string>
    <string name="msg_levelCompleted">Level completed!</string>
    <string name="video_finished">gplus6515033429559912914.mp4</string>
    <string name="video_finished5">gplus6515033429559912914.mp4</string>
    <string name="video_finished10">gplus6515033429559912914.mp4</string>
    <string name="header_string">Level: 1 \tCredits: 3 \tRow: 0 </string>
    <string name="header6_string">Level: 2 \tCredits: 3 \tRow: 0 </string>
    <string name="header7_string">Level: 3 \tCredits: 3 \tRow: 0 </string>
    <string name="header8_string">Level: 4 \tCredits: 3 \tRow: 0 </string>
    <string name="header9_string">Level: 5 \tCredits: 3 \tRow: 0 </string>
    <string name="header10_string">Level: 6 \tCredits: 3 \tRow: 0 </string>
    <string name="s_row0" translatable="false">row0</string>
    <string name="s_row1" translatable="false">row1</string>
    <string name="s_row2" translatable="false">row2</string>
    <string name="f_a0" translatable="false">a0</string>
    <string name="f_b0" translatable="false">b0</string>
    <string name="f_c0" translatable="false">c0</string>
    <string name="f_d0" translatable="false">d0</string>
    <string name="f_e0" translatable="false">e0</string>
    <string name="f_f0" translatable="false">f0</string>
    <string name="f_g0" translatable="false">g0</string>
    <string name="f_h0" translatable="false">h0</string>
    <string name="f_i0" translatable="false">i0</string>
    <string name="f_j0" translatable="false">j0</string>
    <string name="f_a1" translatable="false">a1</string>
    <string name="f_b1" translatable="false">b1</string>
    <string name="f_c1" translatable="false">c1</string>
    <string name="f_d1" translatable="false">d1</string>
    <string name="f_e1" translatable="false">e1</string>
    <string name="f_f1" translatable="false">f1</string>
    <string name="f_g1" translatable="false">g1</string>
    <string name="f_h1" translatable="false">h1</string>
    <string name="f_i1" translatable="false">i1</string>
    <string name="f_j1" translatable="false">j1</string>
    <string name="f_a2" translatable="false">a2</string>
    <string name="f_b2" translatable="false">b2</string>
    <string name="f_c2" translatable="false">c2</string>
    <string name="f_d2" translatable="false">d2</string>
    <string name="f_e2" translatable="false">e2</string>
    <string name="f_f2" translatable="false">f2</string>
    <string name="f_g2" translatable="false">g2</string>
    <string name="f_h2" translatable="false">h2</string>
    <string name="f_i2" translatable="false">i2</string>
    <string name="f_j2" translatable="false">j2</string>
    <string name="f_a3" translatable="false">a3</string>
    <string name="f_b3" translatable="false">b3</string>
    <string name="f_c3" translatable="false">c3</string>
    <string name="f_d3" translatable="false">d3</string>
    <string name="f_e3" translatable="false">e3</string>
    <string name="f_f3" translatable="false">f3</string>
    <string name="f_g3" translatable="false">g3</string>
    <string name="f_h3" translatable="false">h3</string>
    <string name="f_i3" translatable="false">i3</string>
    <string name="f_j3" translatable="false">j3</string>
    <string name="f_a4" translatable="false">a4</string>
    <string name="f_b4" translatable="false">b4</string>
    <string name="f_c4" translatable="false">c4</string>
    <string name="f_d4" translatable="false">d4</string>
    <string name="f_e4" translatable="false">e4</string>
    <string name="f_f4" translatable="false">f4</string>
    <string name="f_g4" translatable="false">g4</string>
    <string name="f_h4" translatable="false">h4</string>
    <string name="f_i4" translatable="false">i4</string>
    <string name="f_j4" translatable="false">j4</string>
    <string name="f_a5" translatable="false">a5</string>
    <string name="f_b5" translatable="false">b5</string>
    <string name="f_c5" translatable="false">c5</string>
    <string name="f_d5" translatable="false">d5</string>
    <string name="f_e5" translatable="false">e5</string>
    <string name="f_f5" translatable="false">f5</string>
    <string name="f_g5" translatable="false">g5</string>
    <string name="f_h5" translatable="false">h5</string>
    <string name="f_i5" translatable="false">i5</string>
    <string name="f_j5" translatable="false">j5</string>
    <string name="f_a6" translatable="false">a6</string>
    <string name="f_b6" translatable="false">b6</string>
    <string name="f_c6" translatable="false">c6</string>
    <string name="f_d6" translatable="false">d6</string>
    <string name="f_e6" translatable="false">e6</string>
    <string name="f_f6" translatable="false">f6</string>
    <string name="f_g6" translatable="false">g6</string>
    <string name="f_h6" translatable="false">h6</string>
    <string name="f_i6" translatable="false">i6</string>
    <string name="f_j6" translatable="false">j6</string>
    <string name="f_a7" translatable="false">a7</string>
    <string name="f_b7" translatable="false">b7</string>
    <string name="f_c7" translatable="false">c7</string>
    <string name="f_d7" translatable="false">d7</string>
    <string name="f_e7" translatable="false">e7</string>
    <string name="f_f7" translatable="false">f7</string>
    <string name="f_g7" translatable="false">g7</string>
    <string name="f_h7" translatable="false">h7</string>
    <string name="f_i7" translatable="false">i7</string>
    <string name="f_j7" translatable="false">j7</string>
    <string name="f_a8" translatable="false">a8</string>
    <string name="f_b8" translatable="false">b8</string>
    <string name="f_c8" translatable="false">c8</string>
    <string name="f_d8" translatable="false">d8</string>
    <string name="f_e8" translatable="false">e8</string>
    <string name="f_f8" translatable="false">f8</string>
    <string name="f_g8" translatable="false">g8</string>
    <string name="f_h8" translatable="false">h8</string>
    <string name="f_i8" translatable="false">i8</string>
    <string name="f_j8" translatable="false">j8</string>
    <string name="f_a9" translatable="false">a9</string>
    <string name="f_b9" translatable="false">b9</string>
    <string name="f_c9" translatable="false">c9</string>
    <string name="f_d9" translatable="false">d9</string>
    <string name="f_e9" translatable="false">e9</string>
    <string name="f_f9" translatable="false">f9</string>
    <string name="f_g9" translatable="false">g9</string>
    <string name="f_h9" translatable="false">h9</string>
    <string name="f_i9" translatable="false">i9</string>
    <string name="f_j9" translatable="false">j9</string>
    <string name="s_a0" translatable="false">s_a0</string>
    <string name="s_a1" translatable="false">s_a1</string>
    <string name="s_a2" translatable="false">s_a2</string>
    <string name="s_a3" translatable="false">s_a3</string>
    <string name="s_a4" translatable="false">s_a4</string>
    <string name="s_a5" translatable="false">s_a5</string>
    <string name="s_a6" translatable="false">s_a6</string>
    <string name="s_a7" translatable="false">s_a7</string>
    <string name="s_a8" translatable="false">s_a8</string>
    <string name="s_a9" translatable="false">s_a9</string>
    <string name="s_b0" translatable="false">s_b0</string>
    <string name="s_b1" translatable="false">s_b1</string>
    <string name="s_b2" translatable="false">s_b2</string>
    <string name="s_b3" translatable="false">s_b3</string>
    <string name="s_b4" translatable="false">s_b4</string>
    <string name="s_b5" translatable="false">s_b5</string>
    <string name="s_b6" translatable="false">s_b6</string>
    <string name="s_b7" translatable="false">s_b7</string>
    <string name="s_b8" translatable="false">s_b8</string>
    <string name="s_b9" translatable="false">s_b9</string>
    <string name="s_c0" translatable="false">s_c0</string>
    <string name="s_c1" translatable="false">s_c1</string>
    <string name="s_c2" translatable="false">s_c2</string>
    <string name="s_c3" translatable="false">s_c3</string>
    <string name="s_c4" translatable="false">s_c4</string>
    <string name="s_c5" translatable="false">s_c5</string>
    <string name="s_c6" translatable="false">s_c6</string>
    <string name="s_c7" translatable="false">s_c7</string>
    <string name="s_c8" translatable="false">s_c8</string>
    <string name="s_c9" translatable="false">s_c9</string>
    <string name="s_d0" translatable="false">s_d0</string>
    <string name="s_d1" translatable="false">s_d1</string>
    <string name="s_d2" translatable="false">s_d2</string>
    <string name="s_d3" translatable="false">s_d3</string>
    <string name="s_d4" translatable="false">s_d4</string>
    <string name="s_d5" translatable="false">s_d5</string>
    <string name="s_d6" translatable="false">s_d6</string>
    <string name="s_d7" translatable="false">s_d7</string>
    <string name="s_d8" translatable="false">s_d8</string>
    <string name="s_d9" translatable="false">s_d9</string>
    <string name="s_e0" translatable="false">s_e0</string>
    <string name="s_e1" translatable="false">s_e1</string>
</resources>