<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.HelpActivity">

    <ImageView
        android:id="@+id/appHeader"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="#880000"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/header" />


    <TextView
        android:id="@+id/helpTextView"
        android:layout_width="match_parent"
        android:layout_height="360px"
        android:layout_margin="20dp"
        android:maxHeight="380dp"
        android:scrollbars="horizontal"
        android:text="@string/help_help"
        android:textSize="12sp"
        tools:maxHeight="320dp" />

    <!-- This FrameLayout adds no behavior to the UI, it simply occupies all the extra space which forces the views below down to the bottom of the screen. -->

    <TextView
        android:id                ="@+id/builtWithTextView"
        android:layout_width      ="match_parent"
        android:layout_height     ="wrap_content"
        android:layout_marginLeft ="20dp"
        android:layout_marginRight="20dp"
        android:text              ="@string/build_with" />

    <Button
        android:id           ="@+id/learnMoreButton"
        android:layout_width ="match_parent"
        android:layout_height="wrap_content"
        android:text         ="@string/learn_more" />
    <Button
        android:id           ="@+id/backButton"
        android:layout_width ="match_parent"
        android:layout_height="wrap_content"
        android:text         ="@string/back_button" />


</LinearLayout>